--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,11 @@
   <version>1.0</version>
   <packaging>war</packaging>
 
-  <name>job4j_spring Maven Webapp</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
   <dependencies>
     <dependency>
@@ -26,6 +22,21 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+          <version>5.2.4.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+          <version>5.2.4.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.2.4.RELEASE</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -37,6 +48,36 @@
               <artifactId>maven-checkstyle-plugin</artifactId>
               <version>3.1.2</version>
               <dependencies>
+                  <dependency>
+                      <groupId>org.hamcrest</groupId>
+                      <artifactId>hamcrest-all</artifactId>
+                      <version>1.3</version>
+                      <scope>test</scope>
+                  </dependency>
+                  <dependency>
+                      <groupId>junit</groupId>
+                      <artifactId>junit</artifactId>
+                      <version>4.13.2</version>
+                      <scope>test</scope>
+                  </dependency>
+                  <dependency>
+                      <groupId>org.junit.jupiter</groupId>
+                      <artifactId>junit-jupiter-engine</artifactId>
+                      <version>5.9.0</version>
+                      <scope>test</scope>
+                  </dependency>
+                  <dependency>
+                      <groupId>org.junit.vintage</groupId>
+                      <artifactId>junit-vintage-engine</artifactId>
+                      <version>5.9.0</version>
+                      <scope>test</scope>
+                  </dependency>
+                  <dependency>
+                      <groupId>org.assertj</groupId>
+                      <artifactId>assertj-core</artifactId>
+                      <version>3.23.1</version>
+                      <scope>test</scope>
+                  </dependency>
                   <dependency>
                       <groupId>com.puppycrawl.tools</groupId>
                       <artifactId>checkstyle</artifactId>
